--- a/HorrorMovieAPI.Tests/HorrorMovieAPI.Tests.csproj
+++ b/HorrorMovieAPI.Tests/HorrorMovieAPI.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq.EntityFrameworkCore" Version="3.1.2.1" />
