Added comments to actorDTO and ActorController

--- a/HorrorMovieAPI/HorrorMovieAPI.csproj
+++ b/HorrorMovieAPI/HorrorMovieAPI.csproj
@@ -3,7 +3,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>E:\C#\GroupA_Backend-master\GroupA_Backend-master\HorrorMovieAPI\HorrorMovieAPI.xml</DocumentationFile>
+    <DocumentationFile>HorrorMovieAPI.xml</DocumentationFile>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
