--- a/HorrorMovieAPI/HorrorMovieAPI.csproj
+++ b/HorrorMovieAPI/HorrorMovieAPI.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>HorrorMovieAPI.xml</DocumentationFile>
