Some warnings gone, still warning from PagedList nuget

--- a/HorrorMovieAPI.Tests/HorrorMovieAPI.Tests.csproj
+++ b/HorrorMovieAPI.Tests/HorrorMovieAPI.Tests.csproj
@@ -4,21 +4,13 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
+    <ProjectReference Include="..\HorrorMovieAPI\HorrorMovieAPI.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1"/>
     <PackageReference Include="Moq.EntityFrameworkCore" Version="3.1.2.1"/>
     <PackageReference Include="xunit" Version="2.4.1"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="1.2.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HorrorMovieAPI\HorrorMovieAPI.csproj"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
   </ItemGroup>
 </Project>
