Update azure-pipelines.yml for Edited path for tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,6 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
-    projects: '**/HorrorMovieAPI.Tests.csproj'
+    projects: '**/*Test/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
     testRunTitle: 'Running Unit Tests'
