Update azure-pipelines.yml for Test with TestResult

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,4 @@ steps:
     projects: '**/*Test/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
     testRunTitle: 'Running Unit Tests'
+    publishTestResults: true
