--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,6 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*Tests/*.csproj'
-    configuration: '--logger trx --configuration $(buildConfiguration)'
+    configuration: '--configuration $(buildConfiguration)'
     testRunTitle: 'Running Unit Tests'
 
