Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
     containerRegistry: 'HorrorRegistry'
     repository: 'HorrorApi'
     command: 'buildAndPush'
-    Dockerfile: '**/dockerfile'
+    Dockerfile: 'dockerfile'
