--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
 
 - stage: Test
   dependsOn: Build
-  condition: succeded() 
+  condition: succeded('Build') 
   jobs:
   - job: Test
     steps:
@@ -42,7 +42,7 @@ stages:
 
 - stage: Deploy
   dependsOn: Test
-  condition: succeded()
+  condition: succeded('Test')
   jobs:
   - job: Deploy
     steps:
