Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 variables:
   solution: '**/*.sln'
@@ -43,6 +43,8 @@ stages:
 - stage: Deploy
   dependsOn: Test
   condition: succeeded()
+  pool:
+    vmImage: 'ubuntu-latest'
   jobs:
   - job: Deploy
     steps:
