--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
 
 - stage: Test
   dependsOn: Build
-  condition: succeeded() 
+  condition: failed() 
   jobs:
   - job: Test
     steps:
